components/home/events-section.module.scss
@use "./sections.module.scss";
@use "lib/colors";
@use "lib/breakpoints";

.eventsList {
  display: flex;
  flex-direction: column;
  gap: 16px;

  button {
    width: fit-content;
    color: colors.$gray;
    margin: 0 auto;
  }

  .placeholder {
    height: 6rem;
    border-radius: 8px;
    background: darkslategray;
    animation: glow 2s infinite;
  }
}

.extras {
  display: flex;
  flex-direction: column;
  gap: 16px;
  max-height: 0;
  overflow: hidden;
  transition: 300ms ease-in-out;

  &.expanded {
    max-height: 62.5rem;
  }
}

.emptyAnnouncer {
  display: flex;
  gap: 24px;
  align-items: center;
  margin: 0 auto;
}

.card {
  display: flex;
  padding: 20px 24px;
  gap: 20px;
  width: 100%;
  border: 2px colors.$grayDark solid;
  background: colors.$bg;
  border-radius: 8px;
  position: relative;
}

.cardHeader {
  display: flex;
  flex-direction: column;
  gap: 4px;
  justify-content: center;
  align-items: center;

  span {
    font-size: 1.5rem;
  }
}

.dateRangeDivider {
  width: 1px;
  height: 8px;
  background-color: colors.$border;
}

.cardBody {
  display: flex;
  width: 100%;
  gap: 12px;
}

.cardDetails {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 4px;
  width: 100%;

  b {
    font-weight: 500;
  }

  span,
  div {
    color: colors.$gray;
  }

  div {
    display: flex;
    gap: 6px;
    align-items: center;
  }
}

.locationBox {
  width: min(100%, 31.25rem);
}

.cardAttachments {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

@media (max-width: breakpoints.$xl) {
  .card {
    background: colors.$card;
  }
}

@media (max-width: breakpoints.$sm) {
  .cardBody {
    flex-direction: column;
    align-items: flex-end;
  }

  .cardAttachments {
    flex-direction: row-reverse;
  }
}

